# jpeg-encoder

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: encode.rs
criterion/: Cargo.toml
criterion/benches/: encode.rs  fdct.rs  ycbcr.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: encode_rgb.rs  encode_rgb_custom_q_table.rs  encode_rgb_optimited.rs  encode_rgb_progressive.rs  encode_rgb_subsampled.rs  encode_ycck_progressive.rs
src/: avx.rs  avx2.rs  encoder.rs  error.rs  fdct.rs  huffman.rs  image_buffer.rs  lib.rs  marker.rs  neon.rs  quantization.rs  std_simd.rs  writer.rs
src/avx2/: fdct.rs  ycbcr.rs
src/neon/: ycbcr.rs
src/std_simd/: ycbcr.rs
