[package]
name = "jpeg-encoder"
version = "0.5.1"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "JPEG encoder"
categories = ["multimedia::images"]
keywords = ["jpg", "jpeg", "encoder", "image"]
readme = "README.md"
repository = "https://github.com/vstroebel/jpeg-encoder"

[features]
default = ["std"]
simd = ["std"]
std = []

[dependencies]

[dev-dependencies]
jpeg-decoder = "0.3"
criterion = "0.5"

[profile.dev]
opt-level = 1

[[bench]]
name = "encode"
harness = false
