[package]
name = "jpeg-encoder"
version = "0.7.0"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2024"
license = "(MIT OR Apache-2.0) AND IJG"
description = "JPEG encoder"
categories = ["multimedia::images"]
keywords = ["jpg", "jpeg", "encoder", "image"]
readme = "README.md"
repository = "https://github.com/vstroebel/jpeg-encoder"
rust-version = "1.87"

[features]
default = ["std"]
simd = ["std"]
std = []

# DO NOT USE THIS IN PRODUCTION. Expose several internal functions for benchmark purposes.
benchmark = []

[dependencies]

[dev-dependencies]
jpeg-decoder = { version = "0.3", default-features = false }

[profile.dev]
opt-level = 1
